# getdist

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  GetDist.py  GetDistGUI.py  LICENCE.txt  MANIFEST.in  README.rst  build_mac_app.py  build_mac_app.sh  codemeta.json  ndpost.ini  planckStyle.py  pyproject.toml  requirements.txt  setup.py  testndim.py
.github/workflows/: build_gui_apps.yml  build_mac_app.yml  python-package.yml  tests.yml
docs/: index.html  markdown_builder.py  plot_gallery.html  plot_gallery.ipynb
docs/source/: analysis_settings.rst  arviz_integration.rst  chains.rst  conf.py  covmat.rst  densities.rst  gaussian_mixtures.rst  gui.rst  index.rst  inifile.rst  intro.rst  mcsamples.rst  paramnames.rst  parampriors.rst  plots.rst  types.rst
docs/source/exts/: plot_directive.py
getdist/: __init__.py  _base.py  analysis_defaults.ini  arviz_wrapper.py  chain_grid.py  chains.py  cobaya_interface.py  command_line.py  convolve.py  covcomb.py  covmat.py  covscale.py  densities.py  distparam_template.ini  gaussian_mixtures.py  gtypes.py  inifile.py  kde_bandwidth.py  matplotlib_ext.py  mcsamples.py  new_format_tools.py  paramnames.py  parampriors.py  plots.py  test_distributions.py  types.py  yaml_format_tools.py  yaml_loader.py  yaml_tools.py
getdist/gui/: Resources_pyside.py  Resources_pyside2.py  SyntaxHighlight.py  __init__.py  mainwindow.py  qt_import.py  streamlit_app.py
getdist/gui/mac_app/Contents/: Info.plist
getdist/gui/mac_app/Contents/MacOS/: GetDistGUI
getdist/gui/mac_app/Contents/Resources/: GetDistGUI.icns
getdist/styles/: planck.paramnames  planck.py  tab10.py
getdist/tests/: getdist_test.py  test_arviz_wrapper.py  test_distributions.py
getdist_tests/: getdist_test.py  plot_gallery.py  test_distributions.py
paramgrid/: __init__.py  batchjob.py  batchjob_args.py  gridconfig.py  jobqueue.py
scripts/: MAC_APP_BUILD.md  MAC_APP_SIGNING.md  build_mac_app.py  build_mac_app.sh  build_windows_app.bat  build_windows_app.py  create_mac_dmg.sh  create_windows_msi.py  fix_qt_bundle_ambiguity.sh  fix_qt_frameworks.sh  multiprocessing_hook.py  notarize_mac_app.sh  run_plot_gallery.py  sign_mac_app.sh  sign_windows_app.py
tests/: getdist_test.py
