[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getdist"
authors = [
    { name = "Antony Lewis" },
]
description = "GetDist Monte Carlo sample analysis, plotting and GUI"
readme = "README.rst"
license = "LGPL-3.0-or-later"
license-files = ["LICENCE.txt"]
dynamic = ["version"]
keywords = ["MCMC", "KDE", "sample", "density estimation", "plot", "figure"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.9.0"
dependencies = [
    "numpy>=1.23.0", "matplotlib (>=2.2.0,!=3.5.0)", "scipy>=1.5", "PyYAML>=5.1", "packaging"
]

[project.optional-dependencies]
GUI = ["PySide6>=6.1"]
StreamlitGUI = ["streamlit>=1.24.0"]
docs = ["sphinx", "sphinx_rtd_theme>=1.0", "sphinxcontrib-jquery", "sphinx_markdown_builder", "jupytext"]
dev = ["pre-commit>=3.0.0", "pytest>=6.0"]

[project.scripts]
getdist = "getdist.command_line:getdist_command"
getdist-gui = "getdist.command_line:getdist_gui"
getdist-streamlit = "getdist.command_line:getdist_streamlit"

[project.urls]
Homepage = "https://getdist.readthedocs.io"
Documentation = "https://getdist.readthedocs.io"
Source = "https://github.com/cmbant/getdist"
Tracker = "https://github.com/cmbant/getdist/issues"
Licensing = "https://github.com/cmbant/getdist/blob/master/LICENCE.txt"

[tool.setuptools]
platforms = ["any"]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "getdist.__version__" }

[tool.setuptools.packages.find]
exclude = ["docs"]

[tool.setuptools.package-data]
getdist = ["analysis_defaults.ini", "distparam_template.ini"]
"getdist.gui" = ["images/*.png"]
"getdist.styles" = ["*.paramnames", "*.sty"]

[tool.ruff]
line-length = 120
src = ["getdist"]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E10", "E11", "E20", "E22", "E23", "E25", "E27", "E301", "E302", "E304", "E703",
    "E713", "E714", "E9", "F405", "F406", "F5", "F6", "F7", "F8",
    "W1", "W2", "W3", "W6",
]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
