[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getdist"
authors = [
    { name = "Antony Lewis" },
]
description = "GetDist Monte Carlo sample analysis, plotting and GUI"
readme = "README.rst"
license = "LGPL-3.0-or-later"
license-files = ["LICENCE.txt"]
dynamic = ["version"]
keywords = ["MCMC", "KDE", "sample", "density estimation", "plot", "figure"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.10.0"
dependencies = [
    "numpy>=1.23.0", "matplotlib (>=2.2.0,!=3.5.0)", "scipy>=1.5", "PyYAML>=5.1", "packaging>=24"
]

[project.optional-dependencies]
GUI = ["PySide6>=6.1"]
StreamlitGUI = ["streamlit>=1.24.0"]
docs = ["sphinx", "sphinx_rtd_theme>=1.0", "sphinxcontrib-jquery", "sphinx_markdown_builder", "jupytext"]

[project.scripts]
getdist = "getdist.command_line:getdist_command"
getdist-gui = "getdist.command_line:getdist_gui"
getdist-streamlit = "getdist.command_line:getdist_streamlit"

[project.urls]
Homepage = "https://getdist.readthedocs.io"
Documentation = "https://getdist.readthedocs.io"
Source = "https://github.com/cmbant/getdist"
Tracker = "https://github.com/cmbant/getdist/issues"
Licensing = "https://github.com/cmbant/getdist/blob/master/LICENCE.txt"

[tool.setuptools]
platforms = ["any"]
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "getdist.__version__" }

[tool.setuptools.packages.find]
exclude = ["docs"]

[tool.setuptools.package-data]
getdist = ["analysis_defaults.ini", "distparam_template.ini"]
"getdist.gui" = ["images/*.png"]
"getdist.styles" = ["*.paramnames", "*.sty"]

[tool.ruff]
line-length = 120
src = ["getdist"]
target-version = "py310"

[tool.ruff.lint]
ignore = ["E722", "E741"]
extend-select = ["I"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
# Development tools (linting, formatting, pre-commit)
lint = ["ruff", "pre-commit>=3.0.0", "pyupgrade"]
# Testing dependencies
test = ["pytest>=8.4.1"]
# Documentation building
docs = ["sphinx", "sphinx_rtd_theme>=1.0", "sphinxcontrib-jquery", "sphinx_markdown_builder", "jupytext"]
# MCMC integration testing (not published as these are for testing integration)
mcmc = ["arviz>=0.21.0", "pymc>=5.23.0"]
# All development dependencies
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
    {include-group = "mcmc"}
]
